CDPT-2416: Homepage design improvements - Add a Skip to content component to all pages - Update alt text for main image to be more descriptive - Change the image component to use object-position: top as it works better with the available space on mobile devices. - Change footer heading to blue - Add HR component and add to homepage - Prevent body filling space on tall screens, but adapt the footer to fill any remaining space - Increase body font on homepage and flex percentage for the image w/ text component for better content alignment.

--- a/public/app/frontend/src/components/footer/footer.scss
+++ b/public/app/frontend/src/components/footer/footer.scss
@@ -1,7 +1,6 @@
 @import '../../../style';
 
 .footer {
-    @include spacing('margin', 8, 'top');
     @include spacing('padding', 4, 'top');
 
     background-color: var(--justice-primary-black);
@@ -56,7 +55,7 @@
         @include h3;
 
         font-weight: var(--heading-font-normal);
-        color: var(--justice-primary-white);
+        color: var(--justice-secondary-blue);
     }
 
     &__gov {
