--- a/public/app/frontend/src/layouts/base/base.scss
+++ b/public/app/frontend/src/layouts/base/base.scss
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-
-    main {
-        flex: 1;
-    }
+}
+.footer-wrapper {
+    @include spacing('margin', 8, 'top');
+    flex: 1;
+    background-color: var(--justice-primary-black)
 }
